feat: add durable indexed read model processor v3
Implement unified Datahike-backed projections:
- Support map and non-map state through deterministic state/event reducers.
- Persist map entries individually for point reads and streaming traversal.
- Commit state, indexes, metadata, and watermarks atomically per event.
- Store serialized payloads and opaque identifiers as raw bytes.
- Compare binary identifiers by content in lookups, ranges, and coordination.
- Support LMDB and file storage backends.

Add indexed query operations:
- Derive secondary-index field types from declared state schemas.
- Validate definitions, record IDs, indexed values, and sort-position limits.
- Provide record, page, and reduce-records operations.
- Support ascending tuple ordering, equality prefixes, and cursor pagination.
- Bind cursors to tenant, model, version, scope, index, and store generation.
- Preserve partition selection for projection, point, and traversal operations.
- Keep external cursors URL-safe with Base64 encoding.

Implement concurrency and snapshot lifecycle:
- Serialize catch-up per tenant, model, version, and normalized scope.
- Capture finite event heads and enforce ascending replay order.
- Allow unrelated projections and committed snapshot reads to proceed.
- Support immutable reducer branches and commit only the returned branch.
- Restrict intermediate backed maps to their reducer thread and invocation.
- Retain committed snapshots across updates, collection, and store close.
- Enforce exclusive storage ownership and release resources after retention ends.
- Expose manual and scheduled collection failures through store status.

Add resource controls and failure handling:
- Bound event batches by count and optional serialized-byte limits.
- Support catch-up, page, and reduction time and byte budgets.
- Return continuation cursors for budget-limited pages.
- Preserve committed progress when catch-up fails.
- Reject conflicting definitions at the same version befor