@@ -7,7 +7,7 @@ Code samples in this doc assume the following requires are in scope:
          '[ai.obney.grain.query-processor.interface       :refer [defquery]]
          '[ai.obney.grain.todo-processor-v2.interface     :refer [defprocessor]]
          '[ai.obney.grain.periodic-task.interface         :refer [defperiodic]]
-         '[ai.obney.grain.read-model-processor-v2.interface :as rmp :refer [defreadmodel]]
+         '[ai.obney.grain.read-model-processor-v3.interface :as rmp :refer [defreadmodel]]
          '[ai.obney.grain.event-store-v3.interface        :refer [->event defevent]])
 ```
 
@@ -55,7 +55,9 @@ Events are immutable facts about what happened:
  :name "My Counter"}                    ; directly into the event
 ```
 
-**Always use `->event` to construct events.** It generates UUID v7 IDs (time-ordered) required by the event store for correct ordering and deduplication. Never construct event maps manually with `java.util.UUID/randomUUID` — events with v4 UUIDs will be silently misordered or lost.
+Use `->event` to construct event payloads. The event-store backend assigns ordered
+UUID v7 IDs and timestamps when appending them. Read-model watermarks use those
+persisted IDs.
 
 ### Event Definitions
 
@@ -175,129 +177,272 @@ node-local because each node runs its own scheduler.
 
 ## Read Models / Projections
 
-Read models are pure reducer functions `(state, event) -> state` that project event streams into queryable state. The processor handles caching, incremental updates, and multi-tenant isolation automatically.
+The v3 read-model processor folds events through a deterministic reducer
+`(state, event) -> state`. Initial state is `{}`. Each processed event commits its
+state changes, secondary indexes, and watermark in one Datahike transaction.
+Queries catch up to a captured event head before reading a committed snapshot.
 
-### Defining Read Models
+Serialized record values, original keys, root values, metadata, and definition
+descriptors are stored as raw Fressian bytes. Lookup keys, projection identities,
+and partition identifiers also use raw bytes. External cursors use URL-safe
+Base64; indexed fields use native scalar types and indexed record IDs use string
+ordering. Datahike uses keyword attributes
+(`:attribute-refs? false`) to support byte attributes in the pinned version.
+Earlier v3 stores using string identifiers or Base64 payloads must be rebuilt
+in a fresh storage directory by replaying events; they are not converted automatically.
 
-The `defreadmodel` macro defines and registers read model reducers, following the same pattern as `defcommand` and `defquery`:
+Catch-up is serialized per tenant, model, version, and query scope. Partition
+selections share the catch-up for their underlying projection. A projection's
+event fetching or reducer does not hold up unrelated projections or reads from
+committed snapshots. Query traversal and `reduce-records` callbacks do not hold
+a writer lock. Datahike still serializes database transactions.
+
+The component is included in `grain-core-v2`.
+
+### Store and context
+
+Open one projection store for the application's lifetime and close it at shutdown:
+
+```clojure
+(def projection-store
+  (rmp/open-store {:storage-dir "data/projections"}))
+
+(def context {:event-store event-store
+              :projection-store projection-store
+              :tenant-id tenant-id}) ; trusted UUID, supplied by the application
+
+;; At shutdown:
+(rmp/close-store! projection-store)
+```
+
+LMDB is the default backend. It requires Java 22+ and the native LMDB library;
+set `KONSERVE_LMDB_LIB` if the library cannot be discovered. Use `:backend :file`
+for Datahike's file backend. Only one store handle/process may own a storage
+path. Use a separate path per node in a multi-instance deployment.
+
+A store contains multiple tenants, models, versions, and event scopes. Projection
+identity includes the trusted tenant UUID, qualified model name, version, and
+scope. Tenant identity comes from context, including for custom event queries.
+
+### Define a projection
+
+The examples assume the event payload schemas are registered with `defevent`
+or `defschemas`, as described above.
 
 ```clojure
 (defreadmodel :example counters
   {:events #{:example/counter-created :example/counter-incremented}
    :version 1}
-  "Reducer for counter read model."
+  "Counter names and values, keyed by counter ID."
   [state event]
   (let [{:event/keys [type] :keys [counter-id name]} event]
     (case type
       :example/counter-created
-      (assoc state counter-id {:id counter-id :name name :value 0})
+      (assoc state counter-id {:name name :value 0})
       :example/counter-incremented
       (update-in state [counter-id :value] inc)
       state)))
-```
 
-Project it by name anywhere you have a context:
-
-```clojure
 (rmp/project context :example/counters)
+(rmp/record context :example/counters counter-id)
+;; => {:item {:id counter-id :value {:name "Visits" :value 3}}
+;;     :watermark event-id}
 ```
 
-### Two-Tier Caching
+`record` returns `:item nil` when the key is absent. A record is a top-level map
+entry; its value may be a scalar, map, vector, or another supported serializable
+value. Map entries are stored and decoded independently. Non-map root values use
+the same store, serialized as one value; `record`, `page`, and `reduce-records`
+require a map root.
 
-Projections use a two-tier cache inspired by [Datomic's object cache](https://docs.datomic.com/operation/caching.html):
+Reducers may use `get`, `assoc`, `update`, `dissoc`, `seq`, `reduce`, and
+`reduce-kv`. They can read and update multiple entries in one event. The returned
+map determines the committed changes. Returning an ordinary map replaces the
+whole projection; returning `{}` clears it. Storage-backed maps do not support
+transients. An event's working set must fit available memory.
 
-**L1 (in-process):** Deserialized Clojure maps held in a global LRU atom. Zero serialization cost on read. Configurable TTL controls the freshness/speed tradeoff:
+Reducers must be deterministic and side-effect free. If an event fails, its
+changes and watermark are not committed. Earlier successful events remain
+committed; retries resume after their watermark.
 
-| TTL | Behavior | Use Case |
-| --- | --- | --- |
-| 0 (default) | Always checks event store for new events | Real-time consistency |
-| > 0 | Skips all I/O within TTL window (< 0.2ms) | Pagination, filter changes |
+### Result lifetime
 
-**L2 ([LMDB](http://www.lmdb.tech/doc/starting.html)):** [Fressian](https://github.com/clojure/data.fressian)-serialized state on disk. Survives process restarts. Watermark-based incremental updates — on each call, the processor reads only events *after* the last watermark.
+`project` returns a read-only, storage-backed map for map projections. Looking up
+one key decodes that entry. Traversing all entries still reads and decodes the
+whole collection. Use `(into {} result)` when an editable, materialized map is
+needed.
 
-Three L2 storage strategies are selected automatically:
+Committed results retain their snapshot across later updates, storage cleanup,
+and store close. Retaining a lazy traversal also retains its snapshot. Release
+application references when finished: retained results delay storage reclamation
+and final store release. Snapshots protect the database commit, which may include
+other models and tenants in the same store.
 
-| Strategy | Trigger | Description |
-| --- | --- | --- |
-| **Monolithic** | < 10K keys | Single LMDB entry per read model |
-| **Segmented** | >= 10K keys | 64 hash-based segments; only changed segments are written back |
-| **Partitioned** | `partition-fn` + `entity-id-fn` in opts | Per-partition cache entries with a global manifest (see below) |
+Intermediate storage-backed maps may only be accessed during their reducer call,
+on its thread. Do not retain them or return lazy computations that access them
+later. Persisted map metadata must be serializable.
 
-L2 write-back is deferred until >= 10 new events have been processed, reducing I/O for rapidly changing state.
+### Secondary indexes and pages
 
-Configure L1 TTL per read model:
+Declare indexes over fields of a map's values:
 
 ```clojure
-(defreadmodel :example counters
-  {:events #{:example/counter-created :example/counter-incremented}
+(defreadmodel :admin students
+  {:events #{:student/updated :student/deleted}
    :version 1
-   :l1-ttl-ms 1000}  ;; 1s TTL — pagination clicks return in < 0.2ms
+   :schema [:map-of :string
+            [:map [:surname :string] [:status :keyword] [:balance :int]]]
+   :indexes {:by-status-name {:fields [:status :surname]}
+             :by-balance {:fields [:balance]}}}
   [state event]
-  ...)
+  (case (:event/type event)
+    :student/deleted (dissoc state (:student-id event))
+    :student/updated (assoc state (:student-id event)
+                           (select-keys event [:surname :status :balance]))))
+
+(def first-page
+  (rmp/page context :admin/students
+    {:index :by-status-name :prefix [:active] :limit 25}))
+;; => {:items [{:id "s42" :value {:surname "Adams" :status :active :balance 100}} ...]
+;;     :watermark event-id
+;;     :next-cursor "..."}
+
+(when-let [cursor (:next-cursor first-page)]
+  (rmp/page context :admin/students
+    {:index :by-status-name :prefix [:active] :limit 25 :after cursor}))
 ```
 
-Manage the L1 cache programmatically:
+Indexes require a `[:map-of id-schema record-schema]` state schema with string or
+UUID IDs. Each index has one to six fields. A field is a keyword or a vector path,
+for example `:surname` or `[:address :city]`. Every indexed path must be required
+and non-nullable, with a string, keyword, signed 64-bit integer, or UUID schema.
+Other record fields may contain nested or non-scalar values. Types are derived
+from `:schema`. Invalid declarations fail at registration; invalid record updates
+fail before commit. A schema is optional when there are no indexes.
+
+Datahike maintains indexes as records change. Pages use ascending native scalar
+order, with the string form of the record ID as the final tie-breaker. `:prefix`
+matches consecutive leading fields by equality; omitting it traverses the whole
+index. There are no descending, arbitrary predicate, or substring-search queries.
+
+`:limit` is a required positive maximum. Resource budgets may produce shorter
+pages. Continue while `:next-cursor` is non-nil; an empty or short item count is
+not a completion signal. Cursors are opaque and bound to the tenant, model,
+version, event scope, rebuild generation, index, and prefix.
+
+Each page is consistent with its own watermark. Later pages catch up again, so
+concurrent changes may move records across the cursor boundary. A cursor does
+not retain the first page's snapshot for subsequent requests. Catch-up and
+rebuilding still process matching events; indexed paging bounds traversal of an
+already-current projection.
+
+### Reduce records
+
+`reduce-records` traverses entries in one committed snapshot and honors `reduced`:
 
 ```clojure
-(rmp/l1-stats)   ;; => {:entries 42}
-(rmp/l1-clear!)  ;; clears all L1 entries (e.g., after deployment)
+(rmp/reduce-records context :admin/students
+  {:index :by-status-name :prefix [:active]}
+  (fn [total {:keys [value]}] (+ total (:balance value)))
+  0)
 ```
 
-### Tenant-Isolated Cache Keys
+Use `{}` as the request to traverse the entire map without a declared index.
+Traversal reads records incrementally; the accumulator determines how much data
+the caller retains. A full reduction still performs work for every visited entry.
 
-Cache keys include the `tenant-id` from the context, ensuring strict multi-tenant isolation at both cache tiers. Two tenants projecting the same read model will never share a cache entry.
+### Event scopes and partitions
 
-### Scoped Projections
-
-The optional `scope` map on `project` supports three patterns:
+All four query operations accept an optional final scope argument:
 
 ```clojure
-;; Filter events by tag set
 (rmp/project context :example/counters {:tags #{[:counter counter-id]}})
 
-;; Override the event query entirely
-(rmp/project context :example/counters {:queries [{:types #{:example/counter-created}
-                                                   :tags #{[:counter counter-id]}}]})
-
-;; Single partition read (partitioned models only — see below)
-(rmp/project context :inventory/items {:partition-key location-id})
+(rmp/project context :example/counters
+  {:queries [{:types #{:example/counter-created :example/counter-incremented}
+              :tags #{[:counter counter-id]}}]})
 ```
 
-The scope is hashed into the cache key, so different scopes maintain independent caches.
+Tags and custom event queries produce independent projections and watermarks.
+A custom query replaces the declaration's event selection. Nil and empty scopes
+refer to the same projection.
 
-### Partitioned Read Models
+A map model may declare `:partition-fn`, which maps an entry's value to a partition
+key. Query it with `{:partition-key key}`. The reducer still receives the full
+projection and processes every matching event. Partition membership changes
+atomically with records; partition reads share the projection's watermark.
+`:entity-id-fn` is accepted for compatibility but is not used.
 
-For datasets that naturally partition (e.g., items by location, patients by clinic), supply `:partition-fn` and `:entity-id-fn` in the opts:
+`project`, `record`, and unindexed `reduce-records` support partition selection.
+An indexed request cannot also supply `:partition-key`. For indexed partition
+pages, put the partition field first in the index and supply it in `:prefix`.
 
-```clojure
-(defreadmodel :inventory items
-  {:events       #{:inventory/item-created :inventory/item-moved}
-   :version      1
-   :partition-fn  (fn [entity] (:location-id entity))
-   :entity-id-fn :item-id}
-  [state event]
-  ...)
+### Store options and budgets
+
+| Store option | Default | Meaning |
+| --- | --- | --- |
+| `:storage-dir` | Required | Local storage directory |
+| `:backend` | `:lmdb` | `:lmdb` or `:file` |
+| `:map-size` | 16 GiB | LMDB virtual map ceiling |
+| `:gc-interval-ms` | 300000 | Automatic storage collection interval |
+| `:pin-ttl-ms` | 3600000 | Lease duration for retained committed snapshots |
+
+`(rmp/store-status projection-store)` reports retained commits, lifecycle state,
+and maintenance failures. `(rmp/collect! projection-store)` requests storage
+collection explicitly. Full collection can be expensive. Datahike's durable-root
+API, used to pin and renew retained snapshots, is marked experimental upstream.
+The component pins its Datahike dependencies.
+
+Set positive integer budgets in context under `:projection-options`:
+
+| Option | Meaning |
+| --- | --- |
+| `:batch-events` | Event fetch batch size; default 128 |
+| `:batch-bytes` | Encoded event batch limit; each event must fit |
+| `:catch-up-ms` | Catch-up time budget |
+| `:page-bytes` / `:page-ms` | Page payload/time budgets |
+| `:reduce-bytes` / `:reduce-ms` | Reduction payload/time budgets |
+
+Other budgets are unset by default. Events commit separately regardless of fetch
+batch size. Page budgets can return a continuation after making progress; an
+oversized first record or a time budget exhausted before progress raises an error.
+Reduction budget exhaustion raises an error. These budgets are checked between
+operations; they do not interrupt a running reducer or database operation.
+
+### Upgrade from v2
+
+1. Require `ai.obney.grain.read-model-processor-v3.interface`.
+2. Open a fresh projection store and supply `:projection-store` in context.
+3. Remove L1/L2, segment, checkpoint, `:kind`, and `:storage` options and cache
+   management calls. V3 rejects obsolete declaration options.
+4. Replay the required event history. Existing v2 storage is not imported.
+
+Bump `:version` when changing reducer semantics, schemas, or indexes. Changed
+stored declaration descriptors at the same version fail explicitly; reducer
+function changes cannot be detected automatically. Rebuilding requires sufficient
+event history, including after retention policies have removed events.
+
+Datastar subscriptions, code-agent tools, Event Model runtime validation, and
+the control plane use the v3 registry. Supply `:projection-store` to the control
+plane and to application contexts that project models. The application owns the
+store and closes it after stopping those consumers.
+
+### Component tests
+
+From `projects/grain-core-v2`:
+
+```sh
+JAVA_CMD=/path/to/java clojure -J-Xmx4g -M:test \
+  -m ai.obney.grain.read-model-processor-v3.test-runner
 ```
 
-- **`partition-fn`** — `(entity -> partition-key)`. Operates on entity *state* (not events). Determines which partition an entity belongs to.
-- **`entity-id-fn`** — `(event -> entity-id)`. Extracts the entity identifier from an event. Used to route events to the correct partition.
+The recovery scenario uses SQLite events and LMDB projections. Run the following
+command in three fresh JVMs with `PHASE` set to `seed`, `interrupt`, then `verify`.
+Use the same initially empty directory each time. Expected exit codes are 0, 17
+(the deliberate crash after transaction commit), and 0.
 
-**How it works:**
-
-1. Each partition is stored as a separate LMDB entry with its own state map.
-2. A manifest tracks all partition keys and a global watermark.
-3. On projection, new events are routed through the reducer and assigned to partitions via `partition-fn`.
-4. **Cross-partition moves** are detected automatically: when `partition-fn` returns a different key after applying an event, the entity is evicted from the source partition and inserted into the destination.
-5. A transient in-memory `entity-id -> partition-key` lookup provides O(1) routing during projection.
-
-**Reading a single partition** is much cheaper than projecting the full model — only events relevant to that partition are processed:
-
-```clojure
-;; All partitions merged (full projection)
-(rmp/project context :inventory/items)
-
-;; Single partition (incremental, no full replay)
-(rmp/project context :inventory/items {:partition-key location-id})
+```sh
+JAVA_CMD=/path/to/java KONSERVE_LMDB_LIB=/path/to/liblmdb.dylib \
+  clojure -J-Xmx4g -J--enable-native-access=ALL-UNNAMED -M:test \
+  -m ai.obney.grain.read-model-processor-v3.restart-scenario PHASE /tmp/grain-v3-recovery
 ```
-
-If no cache exists yet, a single-partition read triggers a full projection first (to build the partition manifest), then serves subsequent reads incrementally.
